@@ -15,7 +15,7 @@ import ast
 import re
 import ctypes as c
 
-from typhon.arts.workspace.api       import arts_api, variable_value_factory
+from typhon.arts.workspace.api       import arts_api
 from typhon.arts.workspace.variables import WorkspaceVariable, group_ids, group_names
 from typhon.arts.workspace import variables, workspace
 
@@ -336,6 +336,7 @@ class WorkspaceMethod:
         # Execute WSM and check for errors.
         arg_out_ptr = c.cast((c.c_long * len(arts_args_out))(*arts_args_out), c.POINTER(c.c_long))
         arg_in_ptr = c.cast((c.c_long * len(arts_args_in))(*arts_args_in), c.POINTER(c.c_long))
+
         e_ptr = arts_api.execute_workspace_method(ws.ptr, m_id,
                                                   len(arts_args_out),
                                                   arg_out_ptr,
